@@ -14,13 +14,13 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 046b8a43a73444e2f2180a6ccb9f40120c3a2ed6 ChangeLog
+SHA1 3a02bdc3ee6fceb96872a68c26dbdfa2c1b0aaa9 ChangeLog
 SHA1 5437f164ae11b18bb58a8576204254a1b4a9334b LICENSE
 SHA1 d910f2158f397101c20143f72890951dbff888b5 MANIFEST
-SHA1 6b20089a52775aad65d9015dec18f05b0b406def META.yml
-SHA1 25b271e99a5ed8337684d13de36e26c687f7b7f9 MYMETA.json
-SHA1 207a31fadac594ab9d56a28724f955f04dfaadf6 MYMETA.yml
-SHA1 0e72db253d2a0a1e244727158ed47d1e654e2aa8 Makefile.PL
+SHA1 69eb213d33ea21014d70e639e3d1217046fcd37e META.yml
+SHA1 0af824447094b0f2963e1aeae9501924303585d1 MYMETA.json
+SHA1 7925010834a2e5299b6175d60f2c949f8d41f317 MYMETA.yml
+SHA1 bc7974a0b83367565d7756dd9b27e8e8ea095501 Makefile.PL
 SHA1 38228eb2b6a24938b795a73e324f9f51a2a13756 README
 SHA1 ecb089134bba590f02aa974be5a6e86d72cdb0dc UNINSTALL_CYGWIN
 SHA1 6671adf9bf15b05200f2eb0ce2ac8b257a9e6050 bin/fullauto.pl
@@ -39,7 +39,7 @@ SHA1 d3a4c720c6ec7f8fce7df37002fbc9177fb77050 inc/Module/Install/Scripts.pm
 SHA1 5457015ea5a50e93465bf2dafa29feebd547f85b inc/Module/Install/Win32.pm
 SHA1 051e7fa8063908befa3440508d0584a2497b97db inc/Module/Install/WriteAll.pm
 SHA1 1bbeeea11b2a95c5f6c8901bbe7f687787d1368f install_mozrepl_plugin.ahk
-SHA1 c34e9f8f97e10d6e17f8ac3a738527869ec57066 lib/Net/FullAuto.pm
+SHA1 4ef30fea144f7483b3dddcfb3ac8d5c800cb004d lib/Net/FullAuto.pm
 SHA1 da4cad3f90b32301fad4f5a910b67b37c5105b49 lib/Net/FullAuto/Custom/BackUp/README
 SHA1 966d316495dc2c924ba00e0eaa065391a8c967c5 lib/Net/FullAuto/Custom/README
 SHA1 931b73137675e23ff80148d72aa09415fdb164af lib/Net/FullAuto/Distro/fa_code.pm
@@ -56,7 +56,7 @@ SHA1 6fac6b17647d05b71441ac3783ceec38b9b71fa6 t/test.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.12 (Cygwin)
 
-iEYEARECAAYFAlD0DekACgkQJM3IZYB6aOo03wCggbId3Ure30Dy+Nkal1rDtVe+
-e+QAoJhN7EaykiPqxUhX94zz66oP9qDc
-=CjQA
+iEYEARECAAYFAlD0KngACgkQJM3IZYB6aOp5egCeLYIkgZ4xTlCXoc1syY29HvAx
+QYEAn0ejmoACtNV9QdEMTXS7KjsLtYBs
+=75MY
 -----END PGP SIGNATURE-----
